--- a/style.css
+++ b/style.css
@@ -292,12 +292,14 @@ main.main-wrapper {
     flex-basis: 40%;
 }
 
-.card_img img {
-    width: 365px;
-    height: 360px;
-    border-radius: 30px;
-    object-fit: none;
-    object-position: 66% 33%;
+.card_img {
+    flex-basis: 40%;
+    background: url(img/run.jpg) no-repeat;
+    background-size: 340%;
+    background-position: 70% 35%;
+    border-radius: 18px;
+    height: 300px;
+    width: 100%;
 }
 
 .card_content h2 {
@@ -983,7 +985,7 @@ div#map iframe {
     }
 }
 
-.footer,.join_card,.training_wrapper,.calculator_wrapper,.team_wrapper,.price_wrapper,.contact_wrapper{
+.footer,.team_wrapper,.price_wrapper,.contact_wrapper{
     display: none;
 }
 
@@ -1111,7 +1113,7 @@ div#map iframe {
     }
     .tittles p {
         padding: 0 20px;
-        margin-bottom: 60px;
+        margin-bottom: 40px;
         line-height: 20px;
     }
     .habit {
@@ -1122,5 +1124,76 @@ div#map iframe {
     }
     .habit_cards {
         grid-template-columns: repeat(1, 250px);
+    }
+
+    .join_card {
+        flex-direction: column;
+        padding: 15px;
+    }
+    
+    .card_content {
+        margin-bottom: 30px;
+    }
+        
+    .card_img {
+        background-size: 178%;
+        background-position: 80% 10%;
+        height: 200px;
+        width: 100%;
+        flex-basis: auto;
+    }
+
+    .excersise6, .excersise3 {
+        display: none;
+    }
+    .excersise_wrap {
+        grid-template-rows: repeat(2, 90px);
+    }
+    .excersise1 {
+        grid-area: 1 / 1 / 2 / 7;
+        background-size: cover;
+    }
+    .excersise2 {
+        grid-area: 1 / 7 / 2 / -1;
+        background-size: 250%;
+        background-position: 70%;
+    }
+    .excersise4 {
+        grid-area: 2 / 1 / 3 / 6;
+    }
+    .excersise5 {
+        grid-area: 2 / 6 / 3 / -1;
+    }
+
+    .training_tittles {
+        width: 80%;
+    }
+    .training_tittles h2 {
+        font-size: 2.5rem; 
+    }
+    .training_tittles p {
+        line-height: 15px;
+    }
+
+    .calc_items p{
+        font-size: 1rem;
+    }
+    .form {
+        grid-template-columns: repeat(2, 130px);
+        grid-template-rows: repeat(2, 30px);
+    }
+    form.form input{
+        font-size: 1rem;
+    }
+    #gender, #activity{
+        font-size: 1rem;
+        height: 30px;
+    }
+    .gender_wrapper::before, .activity_wrapper::before {
+        font-size: 16px;
+        top: 28%;
+    }
+    button.calculate-btn {
+        margin-top: 10px;
     }
 }
