--- a/style.css
+++ b/style.css
@@ -985,7 +985,7 @@ div#map iframe {
     }
 }
 
-.footer,.team_wrapper,.price_wrapper,.contact_wrapper{
+.footer,.price_wrapper,.contact_wrapper{
     display: none;
 }
 
@@ -1195,5 +1195,22 @@ div#map iframe {
     }
     button.calculate-btn {
         margin-top: 10px;
+    }
+
+    .team_persons {
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(4, 350px);
+        margin-top: 20px;
+        padding: 15px;
+    }
+    .trainer_dtl h4 {
+        font-size: 1.6rem;
+    }
+    .trainer_dtl p {
+        font-size: 1.2rem;
+    }
+    .person1,.person4{
+        display: none;
     }
 }
