--- a/style.css
+++ b/style.css
@@ -1242,7 +1242,7 @@ div#map iframe {
     .price_card{
         min-width: 280px;
     }
-    .hero_btn {
+    .price_btn {
         padding: 20px 50px;
     }
     div#map iframe{
