--- a/style.css
+++ b/style.css
@@ -1041,6 +1041,7 @@ div#map iframe {
     #map {
         min-width: 100%;
         margin-top: 60px;
+        margin-bottom: 40px;
     }
 
     .packages_card {
